--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <!DOCTYPE html>  
-  </html>
   <head><title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
@@ -8,7 +7,7 @@
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
       <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
@@ -24,7 +23,7 @@
             <input type="text"><button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="edit-Mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task"><button class="edit">Save</button>
