--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
   </head>
   <body>
+  <div class="main"></div>
     <div class="logo">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="logo-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="center-main-page-element">
@@ -16,7 +17,7 @@
         </div>
       </p>
     <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul class="page" id="incompleteTasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -31,7 +32,7 @@
         </li>
       </ul>
     <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul class="page" id="completed-tasks">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
@@ -41,5 +42,6 @@
       </ul>
     </div>
   <script SRC="app.js"></script>
+  </div>
   </body>
 </html>
