--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
   </head>
-  <body>
-  <div class="main"></div>
+  <body class="main">  
     <div class="logo">
       <img class="logo-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
@@ -41,7 +40,6 @@
         </li>
       </ul>
     </div>
-  <script SRC="app.js"></script>
-  </div>
+  <script SRC="app.js"></script>  
   </body>
 </html>
