--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="main">  
     <header class="logo">
-      <img class="logo-img" src="./eisenhower-matrix.jpg">
+      <img class="logo-img" src="./eisenhower-matrix.jpg" alt="logo">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="center-main-page-element">
