--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
   </head>
-  <body class="main">  
-    <header class="logo">
-      <img class="logo-img" src="./eisenhower-matrix.jpg" alt="logo">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="body">  
+    <header class="header">
+      <img class="logo logo__img" src="./eisenhower-matrix.jpg" alt="logo">
+      <a class="Logo__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="center-main-page-element">
-      <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+    <main class="main main__tasks">
+      <p class="main__tasks_add-item" ><label for="new-task">Add Item</label>
+        <div class="main__tasks_add-item_input">
           <input id='new-task'class="task" type="text"><button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-        <ul class="page" id="incompleteTasks">
-          <li>
-            <input type="checkbox">
+        <ul class="main__task" id="incompleteTasks">
+          <li class="main__task_list">
+            <input class="main__task_list_checkbox" type="checkbox">
             <label class="task">Pay Bills</label>
-              <input type="text"><button class="edit">Edit</button>
+              <input class="main__task_list_text" type="text"><button class="edit">Edit</button>
               <button class="delete"><img src="./remove.svg"></button>
           </li>
-          <li class="edit-Mode">
-            <input type="checkbox">
+          <li class="main__task_list edit-Mode">
+            <input class="main__task_list_checkbox" type="checkbox">
             <label class="task">Go Shopping</label>
-              <input type="text" value="Go Shopping" class="task"><button class="edit">Save</button>
+              <input type="text" value="Go Shopping" class="main__task_list_text task"><button class="edit">Save</button>
               <button class="delete"><img src="./remove.svg"></button>
           </li>
         </ul>
       <h3>Completed</h3>
-        <ul class="page" id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
+        <ul class="main__task" id="completed-tasks">
+          <li class="main__task_list">
+            <input class="main__task_list_checkbox" type="checkbox" checked>
             <label class="task">See the Doctor</label>
-              <input type="text" class="task"><button class="edit">Edit</button>
+              <input type="text" class="main__task_list_text task"><button class="edit">Edit</button>
               <button class="delete"><img src="./remove.svg"></button>
           </li>
         </ul>
