--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <input class="main__task_list_checkbox" type="checkbox">
             <label class="task">Pay Bills</label>
               <input class="main__task_list_text" type="text"><button class="edit">Edit</button>
-              <button class="delete"><img src="./remove.svg"></button>
+              <button class="delete"><img src="./remove.svg" alt=""></button>
           </li>
           <li class="main__task_list edit-Mode">
             <input class="main__task_list_checkbox" type="checkbox">
             <label class="task">Go Shopping</label>
               <input type="text" value="Go Shopping" class="main__task_list_text task"><button class="edit">Save</button>
-              <button class="delete"><img src="./remove.svg"></button>
+              <button class="delete"><img src="./remove.svg" alt=""></button>
           </li>
         </ul>
       <h3>Completed</h3>
@@ -40,7 +40,7 @@
             <input class="main__task_list_checkbox" type="checkbox" checked>
             <label class="task">See the Doctor</label>
               <input type="text" class="main__task_list_text task"><button class="edit">Edit</button>
-              <button class="delete"><img src="./remove.svg"></button>
+              <button class="delete"><img src="./remove.svg" alt=""></button>
           </li>
         </ul>
     </main>
