refactor: delete tag 'type' at ruleto rule 2.4 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <input class="main__task_list_text" type="text"><button class="edit">Edit</button>
               <button class="delete"><img src="./remove.svg" alt=""></button>
           </li>
-          <li class="main__task_list edit-Mode">
+          <li class="main__task_list edit-mode">
             <input class="main__task_list_checkbox" type="checkbox">
             <label class="task">Go Shopping</label>
               <input type="text" value="Go Shopping" class="main__task_list_text task"><button class="edit">Save</button>
